* fix lỗi ko hiện activity + thêm 2 action cho alert dialog Random + load duoc hình từ internet bên activity Load Image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".Random"
             android:label="Random"/>
+        <activity android:name=".LoadImageInternet"
+            android:label="Load Image from Internet"/>
     </application>
 
 </manifest>
