- tạo hàm random số - đổi tên class Random, - lỗi xét if else edit text có rỗng hay ko

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Random"
+        <activity android:name=".RandomNumber"
             android:label="Random"/>
         <activity android:name=".LoadImageInternet"
             android:label="Load Image from Internet"/>
